syntax="proto3";

import "common.proto";

package cutchin_cash.auth;

option java_package = "cutchin_cash.models.auth";
option java_multiple_files = true;


message LoginRequest {
    string email = 1;
    string password = 2;
}


message RegisterRequest {
    string email = 1;
    string password = 2;
    string displayName = 3;
    string fullName = 4;
}
message RegisterResponse {
    cutchin_cash.common.User user = 1;
    cutchin_cash.common.Token token = 2;
}


service AuthService {
    rpc Login(LoginRequest) returns (cutchin_cash.common.Token) {}
    rpc Register(RegisterRequest) returns (RegisterResponse) {}
    rpc Refresh(cutchin_cash.common.Token) returns (cutchin_cash.common.Token) {}
}